bk_ida/gccida/c3/truthvalue_conversion
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2568:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2572:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2574:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2575:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2576:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2577:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v15; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2578:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2579:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2582:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2584:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2586:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2590:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2650:22: error: expected expression
v13 = *( tree_node **)( v11 + 8); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2650:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( v11 + 8); 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2660:25: error: expected expression
elements = ( tree_node *)v11; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2660:14: error: use of undeclared identifier 'tree_node'
elements = ( tree_node *)v11; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2737:21: error: expected expression
imag = ( tree_node *)*( &global_trees + 11); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/c-common.c:2737:10: error: use of undeclared identifier 'tree_node'
imag = ( tree_node *)*( &global_trees + 11); 
         ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/truthvalue_conversion/src/obj/c-common.o] Error 1
